--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="navbar" data-animation="default" data-collapse="all" data-duration="400" >
+    <div class="navbar">
         <div class="container">
             <a class="brand-link" href="/" >
                 <h1 class="logo">James (Jeng Han) Huang</h1>
@@ -25,7 +25,7 @@
             <nav class="nav-menu">
                 <a class="nav-link current" href="/">Home</a>
                 <a class="nav-link " href="#projects">Projects</a>
-                <a class="nav-link " href="#about">About</a>
+                <a class="nav-link " href="#contact">About</a>
             </nav>
 
             <div class="menu-button nav-button">
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <div class="slider" data-animation="fade" data-duration="500" data-infinite="1" data-deplay="4000" data-autoplay="1">
+    <div class="slider">
         <div class="slider-mask">
             <div class="slide">
                 <div class="container">
@@ -46,14 +46,14 @@
             <div class="slide _2">
                 <div class="container">
                     <h1 class="main-heading">I'm James.</h1>
-                    <h1 class="main-heading">I develop signal/image processing systems<span class="replace-text"></span>.</h1>
+                    <h1 class="main-heading">I design signal/image processing systems<span class="replace-text"></span>.</h1>
                     <div class="button-group"><a href="#projects" class="button hollow">View Projects</a><a href="#contact" class="button hollow">Contact Me</a></div>    
                 </div>
             </div>
             <div class="slide _3">
                 <div class="container">
                     <h1 class="main-heading">I'm James.</h1>
-                    <h1 class="main-heading">I play with machine learning<span class="replace-text"></span>.</h1>
+                    <h1 class="main-heading">I develop machine learning applications<span class="replace-text"></span>.</h1>
                     <div class="button-group"><a href="#projects" class="button hollow">View Projects</a><a href="#contact" class="button hollow">Contact Me</a></div>    
                 </div>
             </div>
@@ -73,7 +73,7 @@
                     <h2>I can help.</h2>
                 </div>
                 <div class="col col-8">
-                    <p class="paragraph-2">I am a creative technologist, engineer, and software engineer. I am interested in building creative interactive applications and making projects related to signal/image processing and machine learning.</p>
+                    <p class="paragraph-2">I am a creative technologist, engineer, and software engineer. I graduated from New York University Ineractive Telecommunications Program (ITP) and National Tsing Hua University Electrical Engineering Department. I am interested in building creative interactive applications and making projects related to signal/image processing and machine learning.</p>
                     <div class="skill-group">
                         <div class="skill-background">
                             <div class="skill"><span class="light-text"></span>image processing</div>
