--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav class="nav-menu">
                 <a class="nav-link current" href="/">Home</a>
                 <a class="nav-link " href="#projects">Projects</a>
-                <a class="nav-link " href="#contact">About</a>
+                <a class="nav-link " href="#contact">Contact</a>
             </nav>
 
             <div class="menu-button nav-button">
@@ -73,7 +73,7 @@
                     <h2>I can help.</h2>
                 </div>
                 <div class="col col-8">
-                    <p class="paragraph-2">I am a creative technologist, engineer, and software engineer. I graduated from New York University Ineractive Telecommunications Program (ITP) and National Tsing Hua University Electrical Engineering Department. I am interested in building creative interactive applications and making projects related to signal/image processing and machine learning.</p>
+                    <p class="paragraph-2">I am a creative technologist, image processing engineer, and software engineer.<br> I graduated from New York University Ineractive Telecommunications Program (ITP) and National Tsing Hua University Electrical Engineering Department.<br> I am interested in building creative interactive applications and making projects related to signal/image processing and machine learning.</p>
                     <div class="skill-group">
                         <div class="skill-background">
                             <div class="skill"><span class="light-text"></span>image processing</div>
